feat: add transform (validation) and load process

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ __pycache__/
 # Distribution / packaging
 private/
 to_schedule.bat
+my_tracks.sqlite
+test.py
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
