--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@ __pycache__/
 # Distribution / packaging
 private/
 to_schedule.bat
-my_tracks.sqlite
+# my_tracks.sqlite
 test.py
+/sample
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
